# omp-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scoop/: omp-manager.json
src/: app.rs  config.rs  detect.rs  fonts.rs  install.rs  main.rs  preview.rs  segments.rs  shell.rs  theme.rs  themes.rs  ui.rs
