[package]
name = "omp-manager"
version = "0.1.0"
edition = "2021"
description = "A TUI manager for Oh My Posh — browse themes, install fonts, and configure shells with zero effort"
license = "MIT"
readme = "README.md"
keywords = ["oh-my-posh", "prompt", "theme", "tui", "terminal"]
categories = ["command-line-utilities"]
repository = "https://github.com/marlocarlo/omp-manager"
homepage = "https://github.com/marlocarlo/omp-manager"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
regex = "1"

[[bin]]
name = "omp-manager"
path = "src/main.rs"
